--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -26,6 +27,7 @@
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
     "openai": "^4.0.0",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
