--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "dompurify": "^3.2.5",
+    "katex": "^0.16.22",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
