--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "openai": "^4.0.0",
     "razorpay": "^2.9.6",
     "socket.io": "^4.7.1"
