--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run install-client && npm run build"
   },
-  "keywords": ["ai", "chat", "customer-support", "helpmate"],
+  "keywords": [
+    "ai",
+    "chat",
+    "customer-support",
+    "helpmate"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "multer": "^1.4.5-lts.2",
+    "pdf-parse": "^1.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
